--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
   <br>
   <div class="cards">
     <div class="card">
-      <img src="images/Anna.jpg" alt="Anna">
+      <img src="images/ANNA.jpg" alt="ANNA">
       <h3>Anna</h3>
       <p>Anna shares her love for coffee, exploring new blends and experiences with our community.</p>
     </div>
@@ -45,4 +45,5 @@
 
 </body>
 </html>
+
 
